--- a/src/templates/_components/senders/Aliyun/settings.twig
+++ b/src/templates/_components/senders/Aliyun/settings.twig
@@ -60,8 +60,8 @@
     label: "Template Param Template"|t('smslogin'),
     instructions: "Support access varivables: code[string] / captcha[object] / sender[object] etc.",
     required: true,
-    id: 'templateParam',
-    name: "templateParam",
+    id: 'templateParamTemplate',
+    name: "templateParamTemplate",
     value: sender.templateParamTemplate,
     errors: sender.getErrors('templateParamTemplate'),
     suggestEnvVars: true
